--- a/src/resources/views/admin/auth/edit.hbs
+++ b/src/resources/views/admin/auth/edit.hbs
@@ -76,7 +76,7 @@
     }else{
       alert(data?.message)
     }
-    location.href = "/admin/me/listUser"
+    location.href = "/admin/me/listUser";
     console.log(data);
   });
 </script>
