--- a/src/resources/views/admin/products/create.hbs
+++ b/src/resources/views/admin/products/create.hbs
@@ -24,9 +24,29 @@
           />
         </div>
       </div>
+      <div class="form-group mt-3">
+        <label for="author">Tên tác giả</label>
+        <input
+          type="text"
+          class="form-control"
+          id="author"
+          name="author"
+          placeholder="Enter author"
+        />
+      </div>
+      <div class="form-group mt-3">
+        <label for="year">Năm phát hành</label>
+        <input
+          type="text"
+          class="form-control"
+          id="year"
+          name="year"
+          placeholder="Enter year"
+        />
+      </div>
       <select
         class="form-control form-control-sm col-lg-3 checkbox-select-option"
-        name="category"
+        name="categoryId"
         required
       >
         <option class="text-center" value="">-- Lựa chọn danh mục --</option>
