--- a/src/resources/views/detaill.hbs
+++ b/src/resources/views/detaill.hbs
@@ -167,13 +167,13 @@
               </div>
               <br />
               <br />
-              Tác giả Hemawan Kartajaya
+              Tác giả {{product.author}}
               <br />
               Người Dịch Lan Phương, Thanh Huyền
               <br />
               NXB NXB Lao Động - Xã Hội
               <br />
-              Năm XB 2018
+              Năm XB {{product.year}}
               <br />
               Trọng lượng (gr) 400
               <br />
