--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -61,6 +61,7 @@
             <a class="dropdown-item" href="/admin/auth/viewLogin">Đăng Nhập</a>
             <a class="dropdown-item logoutBtn" href="#">Đăng Xuất</a>
             <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/admin">Admin</a>
             <a class="dropdown-item" href="/admin/products/create">Đăng sản phẩm</a>
             <a class="dropdown-item" href="/admin/categories/create">Thêm danh
               mục sách</a>
@@ -75,13 +76,14 @@
           </div>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
+      <form class="form-inline my-2 my-lg-0" id="submit-search-product">
         <input
-          class="form-control mr-sm-2"
+          class="form-control mr-sm-2 search-product-input"
           type="search"
           placeholder="Search"
           aria-label="Search"
         />
+
         <button
           class="btn btn-outline-success my-2 my-sm-0"
           type="submit"
@@ -92,7 +94,15 @@
 </nav>
 
 <script type="text/javascript">
-  const user = JSON.parse(localStorage.getItem("user")); const nameLogin =
+
+  const searchProduct = document.querySelector(".search-product-input"); const
+  submitSearchProduct = document.querySelector("#submit-search-product");
+  submitSearchProduct.addEventListener("submit", async (e) => {
+  e.preventDefault(); const searchProductCtr = searchProduct.value; const
+  response = await fetch("http://localhost:1999/searchProducts", { method:
+  "GET", headers: { "Content-Type": "application/json" }, }); const data = await
+  response.json(); console.log(data); }); const user =
+  JSON.parse(localStorage.getItem("user")); const nameLogin =
   document.querySelector(".nameLogin"); const userAvatar =
   document.querySelector(".user-avatar"); if(user?.userName && user?.avatar) {
   const srcAvatarUser = user.avatar; nameLogin.textContent = user.userName ;
