--- a/src/resources/views/admin/index.hbs
+++ b/src/resources/views/admin/index.hbs
@@ -1,3 +1,1 @@
-<div class="container" style="background-color: #1d66c1;">
-  <article class="col-9">Đây là phần nội dung của trang Admin 0</article>
-</div>
+<h3>Đây là trang Admin</h3>
