--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -26,8 +26,10 @@
     <div class="app">
       <main>
         <div class="row">
-          <div class="col-xl-12 d-flex ">
+          <div class="col-xl-2 row">
             {{> dashboard}}
+          </div>
+          <div class="col-xl-10 container">
             {{{body}}}
           </div>
         </div>
