--- a/src/resources/views/category-product.hbs
+++ b/src/resources/views/category-product.hbs
@@ -17,14 +17,14 @@
             <div class="col-lg-3 mb-3 pagination pagination-circle">
               <div class="card">
                 <div
-                  class="card-image p-4 bg-image hover-overlay hover-zoom hover-shadow ripple"
+                  class="card-image p-4 bg-image hover-overlay hover-zoom hover-shadow ripple h-100"
                 >
                   <a
                     href="admin/products/{{this.slug}}"
                     class="d-block rounded-lg lift lift-lg"
                   >
                     <img
-                      class="img-fluid rounded-lg"
+                      class="img-fluid h-100"
                       src="{{this.image}}"
                       alt="{{this.image}}"
                     />
