--- a/src/resources/views/index.hbs
+++ b/src/resources/views/index.hbs
@@ -1,32 +1,70 @@
+<div id="demo" class="carousel slide container" data-ride="carousel">
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img
+        src="https://cdn0.fahasa.com/media/magentothem/banner7/Platinum_minhlong_ide_840x320.jpg"
+        alt="Los Angeles"
+        width="1200"
+        height="500"
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://cdn0.fahasa.com/media/magentothem/banner7/Management_mainbanner_T4_840x320_1.jpg"
+        alt="Chicago"
+        width="1200"
+        height="500"
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://cdn0.fahasa.com/media/magentothem/banner7/FahasaT4_Bo1_Slide_840x320_3.jpg"
+        alt="New York"
+        width="1200"
+        height="500"
+      />
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+
 <div class="container">
-  <div class="mt-4 mb-5">
+  <div class="my-4">
+    <h1
+      class="bg-success text-white px-3 rounded-top"
+      style="line-height: 46px;font-size: 17px;text-transform: uppercase;font-weight: 600;"
+    >Sản phẩm mới nhất
+    </h1>
+
     <div class="row">
       {{#each products}}
-        <div
-          class="col-lg-3 mb-3 pagination pagination-circle justify-content-center"
-        >
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mt-3 mb-lg-2">
           <div class="card">
-            <div
-              class="card-image p-4 bg-image hover-overlay hover-zoom hover-shadow ripple"
-            >
-              <a
-                href="admin/products/{{this.slug}}"
-                class="d-block rounded-lg lift lift-lg"
-              >
+            <div class="card-img-top p-4 h-100">
+              <a href="admin/products/{{this.slug}}" class="d-block">
                 <img
-                  class="img-fluid rounded-lg"
+                  class="img-fluid h-100 w-100"
                   src="{{this.image}}"
                   alt="{{this.image}}"
                 />
-                <a href="#!">
-                  <div
-                    class="mask"
-                    style="background-color: hsla(195, 83%, 58%, 0.2)"
-                  ></div>
-                </a>
               </a>
             </div>
-            <div class="card-body card">
+            <div class="card-body">
               <a href="admin/products/{{this.slug}}">
                 <h5 class="card-title text-truncate">{{this.name}}</h5>
               </a>
@@ -39,10 +77,8 @@
             </div>
           </div>
         </div>
-
       {{/each}}
     </div>
-
   </div>
   {{! Phần banner }}
   <div class="slider-banner-wrap">
