--- a/src/resources/views/admin/me/stored-products.hbs
+++ b/src/resources/views/admin/me/stored-products.hbs
@@ -34,6 +34,11 @@
           disabled="disabled"
         >Thực hiện</button>
       </div>
+      <div class="text-right mr-2 mb-2">
+        <a class="btn btn-primary btn-xl ms-3" href="/admin/products/create">
+          <i class="fa fa-plus"></i>
+        </a>
+      </div>
     </div>
 
     <table class="table mt-4">
