--- a/src/resources/views/admin/auth/loginUser.hbs
+++ b/src/resources/views/admin/auth/loginUser.hbs
@@ -92,7 +92,7 @@
   fetch("http://localhost:1999/admin/auth/login", { method: "POST", headers: {
   "Content-Type": "application/json" }, body: JSON.stringify({ password:
   password, userName: username }), }); const data = await response.json(); if
-  (data.user) { localStorage.setItem("user", JSON.stringify(data.user));
+  (data.user) { localStorage.setItem("user", JSON.stringify(data));
   alert(data.message); location.href = "/"; } else { alert(data.message); } });
 </script>
 {{! || data.user.role ===1 }}
