--- a/src/resources/views/admin/me/stored-categories.hbs
+++ b/src/resources/views/admin/me/stored-categories.hbs
@@ -1,5 +1,10 @@
 <div class="container">
   <h3>Danh mục của tôi</h3>
+  <div class="text-right mr-2 mb-2">
+    <a class="btn btn-primary btn-xl ms-3" href="/admin/categories/create">
+      <i class="fa fa-plus"></i>
+    </a>
+  </div>
   <table class="table mt-4">
     <thead>
       <tr>
