--- a/src/resources/views/admin/me/trash-products.hbs
+++ b/src/resources/views/admin/me/trash-products.hbs
@@ -91,16 +91,5 @@
 {{! Delete hidden form  }}
 <form class="mt-4" name="delete-product-form" method="post"></form>
 <form class="mt-4" name="restore-product-form" method="post"></form>
-<script type="module">
-  document.addEventListener('DOMContentLoaded', function(){ var productId; var
-  deleteForm = document.forms['delete-product-form']; var btnDeleteproduct =
-  document.getElementById('btn-delete-product'); var restoreForm =
-  document.forms['restore-product-form']; var restoreBtn = $('.btn-restore');
-  $('#delete-product-modal').on('show.bs.modal', function(event) { var button =
-  $(event.relatedTarget); productId = button.data('id') ; }) ;
-  btnDeleteproduct.onclick = function(){ deleteForm.action = '/admin/products/'
-  +productId+ '/force?_method=delete' ; deleteForm.submit(); };
-  restoreBtn.click(function(e){ e.preventDefault(); var productId =
-  $(this).data('id'); restoreForm.action = '/admin/products/' +productId+
-  '/restore?_method=PATCH' ; restoreForm.submit() }) })
+<script type="module" src="/js/admin/me/trashProducts.js">
 </script>
