--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -61,7 +61,7 @@
             <a class="dropdown-item" href="/admin/auth/viewLogin">Đăng Nhập</a>
             <a class="dropdown-item logoutBtn" href="#">Đăng Xuất</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" id="admin" href="/admin">Admin</a>
+            <a class="dropdown-item" id="admin" href="#">Admin</a>
           </div>
         </li>
       </ul>
