--- a/src/resources/views/index.hbs
+++ b/src/resources/views/index.hbs
@@ -69,7 +69,8 @@
                 <h5 class="card-title text-truncate">{{this.name}}</h5>
               </a>
               <p class="card-text text-truncate">{{this.description}}</p>
-              <p class="card-text text-danger text-right">{{this.price}} đ</p>
+              <p class="card-text text-danger text-right price">{{this.price}}
+              </p>
             </div>
             <div class="card-footer">
               <button href="#" class="btn btn-primary bg-danger border-0">Mua
@@ -91,3 +92,4 @@
   {{! Phần end-banner }}
 
 </div>
+<script src="/js/index.js"></script>
