--- a/src/resources/views/admin/me/stored-categories.hbs
+++ b/src/resources/views/admin/me/stored-categories.hbs
@@ -1,61 +1,58 @@
-<div class="container">
-  <h3>Danh mục của tôi</h3>
-  <div class="text-right mr-2 mb-2">
-    <a class="btn btn-primary btn-xl ms-3" href="/admin/categories/create">
-      <i class="fa fa-plus"></i>
-    </a>
-  </div>
-  <table class="table mt-4">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Sl</th>
-        <th scope="col">Tên Danh Mục
-        </th>
-        <th scope="col" colspan="2">Thời Gian Tạo
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each categories}}
-        <tr>
-          <td>
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                name="productIds[]"
-                value="{{this._id}}"
-              />
-            </div>
-            <th scope="row">{{sum @index 1}}</th>
-          </td>
-          <td>{{this.nameCategory}}</td>
-          <td>{{this.createdAt}}</td>
-          <td>
-            <a
-              href="/admin/categories/{{this._id}}/edit"
-              class="btn btn-link"
-            >Sửa</a>
-            <a
-              href=""
-              data-id="{{this._id}}"
-              class="btn btn-link"
-              data-toggle="modal"
-              data-target="#delete-category-modal"
-            >Xóa</a>
-          </td>
-        </tr>
-      {{else}}
-        <tr>
-          <td colspan="5" class="text-center">Bạn chưa đăng danh mục nào.
-            <a href="/categories/create">Đăng danh mục</a>
-          </td>
-        </tr>
-      {{/each}}
-    </tbody>
-  </table>
+<h3>Danh mục của tôi</h3>
+<div class="text-right mr-2 mb-2">
+  <a class="btn btn-primary btn-xl ms-3" href="/admin/categories/create">
+    <i class="fa fa-plus"></i>
+  </a>
 </div>
+<table class="mt-4 table align-middle mb-0 bg-white table-hover">
+  <thead class="bg-light">
+    <tr>
+      <th>#</th>
+      <th>Sl</th>
+      <th>Tên Danh Mục</th>
+      <th>Thời Gian Tạo</th>
+      <th>Thời Gian Tạo </th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each categories}}
+      <tr>
+        <td>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              name="productIds[]"
+              value="{{this._id}}"
+            />
+          </div>
+          <th scope="row">{{sum @index 1}}</th>
+        </td>
+        <td>{{this.nameCategory}}</td>
+        <td class="createdAt">{{this.createdAt}}</td>
+        <td>
+          <a
+            href="/admin/categories/{{this._id}}/edit"
+            class="btn btn-link btn btn-link btn-sm btn-rounded bg-primary text-white"
+          ><i class="far fa-edit"></i></a>
+          <a
+            href=""
+            data-id="{{this._id}}"
+            class="btn btn-link btn-sm btn-rounded bg-danger text-white"
+            data-toggle="modal"
+            data-target="#delete-category-modal"
+          ><i class="far fa-trash-alt"></i></a>
+        </td>
+      </tr>
+    {{else}}
+      <tr>
+        <td colspan="5" class="text-center">Bạn chưa đăng danh mục nào.
+          <a href="/categories/create">Đăng danh mục</a>
+        </td>
+      </tr>
+    {{/each}}
+  </tbody>
+</table>
 
 {{! Confirm delete product }}
 <!-- Modal -->
@@ -104,5 +101,5 @@
 
 </form>
 
-<script type="module" src="/src/public/js/admin/me/listCategories.js">
+<script type="module" src="/js/admin/me/listCategories.js">
 </script>
