--- a/src/resources/views/category-product.hbs
+++ b/src/resources/views/category-product.hbs
@@ -1,102 +1,94 @@
 <div class="container">
+  <style>
+    .list-category a{text-decoration: none; color: #000;} .list-category
+    a:hover{ color: #087b39; }
+  </style>
   <div class="mt-4 mb-5">
     <div class="row">
-      <div class="category col-xs-12 col-sm-3 bg-light">
-        <ul class="list-category list-unstyled">
-          <a href="/categoryProduct"><li>Tất cả danh mục</li></a>
+      <div
+        class="category col-xl-2 col-md-3 col-sm-3 col-xs-12 bg-light rounded"
+      >
+        <ul class="list-category list-unstyled text-dark rounded">
+          <a href="/categoryProduct" class="py-2 d-block font-weight-bold"><li
+            >Tất cả danh mục</li></a>
           {{#each categories}}
-            <a href="/categoryProduct/listProduct/{{this._id}}">
+            <a
+              class="pt-2 d-block"
+              href="/categoryProduct/listProduct/{{this._id}}"
+            >
               <li>{{this.nameCategory}}</li>
             </a>
           {{/each}}
         </ul>
       </div>
-      <div class="col-xs-12 col-sm-9 justify-content-center">
-        <div class="row">
-          {{#each products}}
-            <div class="col-lg-3 mb-3 pagination pagination-circle">
-              <div class="card">
-                <div
-                  class="card-image p-4 bg-image hover-overlay hover-zoom hover-shadow ripple h-100"
+      <div class="row col-xl-10 col-md-9 col-md-9">
+        {{#each products}}
+          <div
+            class="col-xl-3 col-md-4 d-flex align-items-stretch pagination-circle"
+          >
+            <div class="card mb-3">
+              <div class="card-image p-4 bg-image h-100">
+                <a
+                  href="admin/products/{{this.slug}}"
+                  class="d-block rounded-lg lift lift-lg"
                 >
-                  <a
-                    href="admin/products/{{this.slug}}"
-                    class="d-block rounded-lg lift lift-lg"
-                  >
-                    <img
-                      class="img-fluid h-100"
-                      src="{{this.image}}"
-                      alt="{{this.image}}"
-                    />
-                    <a href="#!">
-                      <div
-                        class="mask"
-                        style="background-color: hsla(195, 83%, 58%, 0.2)"
-                      ></div>
-                    </a>
-                  </a>
-                </div>
-                <div class="card-body card">
-                  <a href="/admin/products/{{this.slug}}">
-                    <h5 class="card-title text-truncate">{{this.name}}</h5>
-                  </a>
-                  <p class="card-text text-truncate">{{this.description}}</p>
-                  <p class="card-text text-danger text-right">{{this.price}}
-                    đ</p>
-                </div>
-                <div class="card-footer">
-                  <button
-                    href="#"
-                    class="btn btn-primary bg-danger border-0"
-                  >Mua sản phẩm</button>
-                </div>
+                  <img
+                    class="img-fluid h-100"
+                    src="{{this.image}}"
+                    alt="{{this.image}}"
+                  />
+
+                </a>
+              </div>
+              <div class="card-body card">
+                <a href="/admin/products/{{this.slug}}">
+                  <h5 class="card-title text-truncate">{{this.name}}</h5>
+                </a>
+                <p class="card-text text-truncate">{{this.description}}</p>
+                <p class="card-text text-danger text-right">{{this.price}}
+                  đ</p>
+              </div>
+              <div class="card-footer">
+                <button href="#" class="btn btn-primary bg-danger border-0">Mua
+                  sản phẩm</button>
               </div>
             </div>
-          {{/each}}
-          {{#each lproducts}}
-            <div class="col-lg-3 mb-3 pagination pagination-circle">
-              <div class="card">
-                <div
-                  class="card-image p-4 bg-image hover-overlay hover-zoom hover-shadow ripple"
+          </div>
+        {{/each}}
+        {{#each lproducts}}
+          <div
+            class="col-md-6 col-lg-3 col-xl-3 d-flex align-items-stretch pagination-circle"
+          >
+            <div class="card">
+              <div class="card-image p-4 bg-image h-100">
+                <a
+                  href="/admin/products/{{this.slug}}"
+                  class="d-block rounded-lg lift lift-lg"
                 >
-                  <a
-                    href="/admin/products/{{this.slug}}"
-                    class="d-block rounded-lg lift lift-lg"
-                  >
-                    <img
-                      class="img-fluid rounded-lg"
-                      src="{{this.image}}"
-                      alt="{{this.image}}"
-                    />
-                    <a href="#!">
-                      <div
-                        class="mask"
-                        style="background-color: hsla(195, 83%, 58%, 0.2)"
-                      ></div>
-                    </a>
-                  </a>
-                </div>
-                <div class="card-body card">
-                  <a href="admin/products/{{this.slug}}">
-                    <h5 class="card-title text-truncate">{{this.name}}</h5>
-                  </a>
-                  <p class="card-text text-truncate">{{this.description}}</p>
-                  <p class="card-text text-danger text-right">{{this.price}}
-                    đ</p>
-                </div>
-                <div class="card-footer">
-                  <button
-                    href="#"
-                    class="btn btn-primary bg-danger border-0"
-                  >Mua sản phẩm</button>
-                </div>
+                  <img
+                    class="img-fluid rounded-lg"
+                    src="{{this.image}}"
+                    alt="{{this.image}}"
+                  />
+
+                </a>
+              </div>
+              <div class="card-body card">
+                <a href="admin/products/{{this.slug}}">
+                  <h5 class="card-title text-truncate">{{this.name}}</h5>
+                </a>
+                <p class="card-text text-truncate">{{this.description}}</p>
+                <p class="card-text text-danger text-right">{{this.price}}
+                  đ</p>
+              </div>
+              <div class="card-footer">
+                <button href="#" class="btn btn-primary bg-danger border-0">Mua
+                  sản phẩm</button>
               </div>
             </div>
-          {{/each}}
-        </div>
+          </div>
+        {{/each}}
       </div>
     </div>
-
   </div>
-
 </div>
