--- a/src/resources/views/detaill.hbs
+++ b/src/resources/views/detaill.hbs
@@ -239,7 +239,7 @@
           </div>
           <div id="comment" class="mt-3 p-3">
             <div class="row mb-4 bg-white">
-              <div class="col-xl-12"><h3 class="p-3 text-center">ĐÁNH GIÁ SẢN
+              <div class="col-xl-12 text-center"><h3 class="p-3">ĐÁNH GIÁ SẢN
                   PHẨM</h3></div>
               {{#each comments}}
                 <div class="col-xl-12 col-sm-6 pb-1 rounded bg-light">
@@ -259,21 +259,24 @@
                       <div class="box-rating">
                         <span class="rating d-none">{{this.rating}}</span>
                         <div class="listRating"></div>
+                        <p class="createdAt">{{this.createdAt}}</p>
                       </div>
                     </div>
                   </div>
-                  <p class="col-xl-6 mt-2">Nội dung đánh giá:
+                  <p class="col-xl-6">
                     {{this.review}}</p>
                 </div>
               {{else}}
-                <h4 class="text-center text-danger">-- Sản phẩm chưa có đánh giá
-                  nào --</h4>
+                <div class="mx-auto">
+                  <h4 class="text-danger">-- Sản phẩm chưa có đánh giá nào --</h4>
+                </div>
               {{/each}}
             </div>
           </div>
           <div class="row">
             <div class="bg-white px-3 container">
               <h4 class="text-center py-2 col-xl-12">Mời bạn đánh giá sản phẩm</h4>
+
               <form id="form-comment">
                 <input
                   type="text"
@@ -299,16 +302,21 @@
                   id="userImage"
                   hidden
                 />
+                <style>
+                  .selected-star { color: rgb(243, 44, 44); } .star { font-size:
+                  24px; cursor: pointer; } .star:hover { color: red; scale: 1.2;
+                  }
+                </style>
                 <div class="form-group">
                   <label for="">Chọn Sao</label>
-                  <select class="form-control" name="rating" id="rating">
-                    <option value="">Chọn Sao</option>
-                    <option value="1">1 Sao</option>
-                    <option value="2">2 Sao</option>
-                    <option value="3">3 Sao</option>
-                    <option value="4">4 Sao</option>
-                    <option value="5">5 Sao</option>
-                  </select>
+                  <div id="rating-stars">
+                    <span class="star fa fa-star" onclick="rate(1)"></span>
+                    <span class="star fa fa-star" onclick="rate(2)"></span>
+                    <span class="star fa fa-star" onclick="rate(3)"></span>
+                    <span class="star fa fa-star" onclick="rate(4)"></span>
+                    <span class="star fa fa-star" onclick="rate(5)"></span>
+                  </div>
+                  <p id="rating" name="rating" class="mt-3 d-none"></p>
                 </div>
                 <div class="form-group">
                   <label for="review">Đánh Giá</label>
