--- a/src/resources/views/partials/dashboard.hbs
+++ b/src/resources/views/partials/dashboard.hbs
@@ -8,7 +8,7 @@
     transition: all ease-in-out 0.5s;
     z-index: 9997;
     transition: all 0.5s;
-    background: #fbfafa;
+    background: #e0e0e0;
     overflow-y: auto;"
 >
   <aside class="w-100">
@@ -24,22 +24,26 @@
           </a>
           <h5 class="mb-2 text-center"><strong>Viết Quân</strong></h5>
           <p class="text-muted text-center">Web designer
-            <span class="badge bg-primary">PRO</span>
+            <span class="badge bg-white text-danger">PRO</span>
           </p>
         </div>
+        <style>
+          .navbar_dashboard-list>ul>li>a{ color: black; display:
+          block;text-decoration: none; padding: 2px 0; border-bottom: 1px solid
+          #ccc;margin-bottom: 10px; }
+        </style>
         <div class="navbar_dashboard-list">
           <ul class="nav d-flex flex-column">
             <li><a class="text-dark" href="/admin"><i
                   class="fa-solid fa-house"
                 ></i>
                 Trang chủ</a></li>
-            <li><a href="/admin/me/stored/products">
-                <i class="fa-solid fa-grid-2"></i>Products</a></li>
+            <li><a href="/admin/me/stored/products">Products</a></li>
             <li><a href="/admin/me/stored/categories"><i
                   class="fa-solid fa-rectangle-list"
                 ></i>Category</a></li>
             <li><a href="/admin/me/stored/listUser"><i
-                  class="fa-solid fa-users mr-2"
+                  class="fa-solid fa-users"
                 ></i>
                 User</a></li>
             <li><a href="/admin">Logout</a></li>
